<resources>
    <string name="app_name">Vega</string>
    <string name="vega_logo">Vega Logo</string>
    <string name="home_banner_text">Halo Nasabah, silahkan login untuk\nmenikmati seluruh fasilitas Vega</string>
    <string name="home_banner_line">Home Banner Line</string>
    <string name="wave">Wave</string>
    <string name="login_vector">Login Vector</string>
    <string name="login_description">Daftar dengan nomor polis dan scan QR atau Login dengan username dan password anda.</string>
    <string name="login_title">Masuk</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pellentesque dolor lectus, ut mollis velit faucibus a.</string>
    <string name="news_item_title_placeholder">Halo Bangkit Academy</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="news">Berita</string>
    <string name="articles">Artikel</string>
    <string name="articles_home_view_all">Lihat semua artikel</string>
    <string name="article_thumbnail">Article Thumbnail</string>
    <string name="home">Home</string>
    <string name="unitlink">Unitlink</string>
    <string name="hospital">Hospital</string>
    <string name="profile">Profile</string>
    <string name="vega">Vega</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_question">Belum memiliki akun Vega?</string>
    <string name="register">Daftar</string>
    <string name="vega_description">VEGA - Versatile Electronic Global Assistant</string>
    <string name="vega_copyright">Copyright © 2024 PT MSIG Life Insurance Indonesia\nTbk All Rights Reserved.</string>
    <string name="dplk">DPLK</string>
    <string name="qr">QR</string>
    <string name="individual">Individual</string>
    <string name="corporate">Corporate</string>
    <string name="register_description">Silahkan pilih jenis pendaftaran</string>
    <string name="register_individual_identity_no">NIK atau Nomor Polis</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="login_question">Sudah memiliki akun Vega?</string>
    <string name="policy_no">Nomor Polis</string>
    <string name="participant_code">Kode Partisipan</string>
    <string name="member_no">Nomor Peserta</string>
    <string name="article">Artikel</string>
    <string name="company_profile">Profil Perusahaan</string>
    <string name="blue_thin_line">Blue Thin Line</string>

    <string name="company_profile_description">PT MSIG Life Insurance Indonesia Tbk (juga dikenal sebagai MSIG Life) telah meramaikan industri asuransi jiwa nasional sejak 14 April 1985. Berdiri sebagai PT Asuransi Jiwa Purnamala Internasional Indonesia (PII) lalu menjalani dua kali proses transformasi, MSIG Life hadir sebagai perusahaan joint venture antara PT Sinar Mas Multiartha Tbk dan grup asuransi raksasa Jepang, Mitsui Sumitomo Insurance Co., Ltd. pada tahun 2011.\n\nMSIG Life resmi menjadi perusahaan terbuka pada 28 Juni 2019 dengan nama PT Asuransi Jiwa Sinarmas MSIG Tbk. Pada tanggal 9 Juli 2019, saham MSIG Life (kode saham: LIFE) mulai melantai di Bursa Efek Indonesia. Bersamaan dengan itu, Mitsui Sumitomo Insurance Co., Ltd. (MSI) resmi menjadi pemegang saham utama dengan komposisi kepemilikan saham Mitsui Sumitomo Insurance Co., Ltd. (80%), PT Sinar Mas Multiartha Tbk (12,5%) dan publik (7,5%).\n\nMitsui Sumitomo Insurance Co., Ltd. merupakan anak perusahaan MSAD Insurance Group Holdings, Inc. MSAD memegang pangsa terbesar premi asuransi umum di Jepang dan tercatat dalam 10 besar bisnis grup asuransi di dunia.</string>
</resources>
