<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".activities.HomeActivity"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/home_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/blueDarker"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/home_banner_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/wave_home_bg"
                    android:layout_marginTop="100dp"
                    android:contentDescription="@string/wave" />
                <ImageView
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:id="@+id/logo"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo_vega_primary"
                    android:contentDescription="@string/vega_logo"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/home_banner_text"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>
            </FrameLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/home_banner_line"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/redIntimidate"
            android:contentDescription="@string/home_banner_line" />
        <LinearLayout
            android:id="@+id/login"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@drawable/shape"
            android:padding="10dp">
            <ImageView
                android:id="@+id/login_vector"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_login_24"
                android:contentDescription="@string/login_vector" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                >
                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/login_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_description"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="15sp"
            android:text="@string/news"
            android:textColor="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:scrollbars="horizontal"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/articles_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="15sp"
                android:text="@string/articles"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/articles_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="15sp"
                android:text="@string/articles_home_view_all"
                android:textColor="@color/redIntimidate"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/articles"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scrollbars="vertical"/>
    </LinearLayout>
</ScrollView>
