<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterDPLKActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/register_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueDarker"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:contentDescription="@string/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/white"
                />
        </RelativeLayout>
        <ImageView
            android:id="@+id/register_dplk_banner_line"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/redIntimidate"
            android:contentDescription="@string/home_banner_line" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/blueDarker"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/member_no"
                android:fontFamily="@font/ubuntu_bold"
                />
            <EditText
                android:id="@+id/register_dplk_input_member_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="username"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/birth_date"
                android:fontFamily="@font/ubuntu_bold"
                />
            <EditText
                android:id="@+id/register_dplk_input_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
            <Button
                android:id="@+id/register_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/blueDarker"
                android:text="@string/register"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_question"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/ubuntu_light"
                    />
                <TextView
                    android:id="@+id/login_button"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/redIntimidate"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueDarker"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vega_description"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="12sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vega_copyright"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="12sp"
            />
    </LinearLayout>
</RelativeLayout>
