<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueDarker"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/profile_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:contentDescription="@string/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_profile"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/white"
                />
        </RelativeLayout>
        <ImageView
            android:id="@+id/profile_banner_line"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/redIntimidate"
            android:contentDescription="@string/home_banner_line" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/thumbnail"
                        android:src="@drawable/company_profile_banner" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/profile_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="start"
                    android:text="@string/company_profile"
                    android:textStyle="bold"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="20sp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#F1F1F1F1"
                    android:contentDescription="@string/blue_thin_line" />
                <TextView
                    android:id="@+id/profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:layout_gravity="start"
                    android:text="@string/company_profile_description"
                    android:textStyle="normal"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="15sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
