<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:contentPadding="5dp"
    card_view:cardCornerRadius="8dp"
    android:outlineSpotShadowColor="@color/black"
    card_view:cardElevation="8dp"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#FFFFFF"
    >
    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="320dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/news_item_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/article_1"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
            />
        <TextView
            android:id="@+id/news_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_item_title_placeholder"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/news_item_subtitle"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:text="@string/lorem_ipsum"
            android:padding="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
