<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ArticleActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/article_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueDarker"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/article_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:contentDescription="@string/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/white"
                />
        </RelativeLayout>
        <ImageView
            android:id="@+id/article_banner_line"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/redIntimidate"
            android:contentDescription="@string/home_banner_line" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/articles"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scrollbars="vertical"/>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
